--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
         </span><span class="s2">"Longitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Latitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="p">,</span><span class="w">
-        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"partnerdomain.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"ReferralId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Password"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"IsActive"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
@@ -743,6 +743,12 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
 <td>string</td>
 <td>Yes</td>
 <td>The email address of the user</td>
+</tr>
+<tr>
+<td>Referral</td>
+<td>string</td>
+<td>Yes</td>
+<td>Your domain name (no www or protocol)</td>
 </tr>
 <tr>
 <td>Address1</td>
@@ -821,7 +827,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
         </span><span class="s2">"Longitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Latitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="p">,</span><span class="w">
-        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"partnerdomain.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"ReferralId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Password"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"IsActive"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
@@ -911,6 +917,12 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
 <td>The user&#39;s phone number</td>
 </tr>
 <tr>
+<td>Referral</td>
+<td>string</td>
+<td>Yes</td>
+<td>Your domain name (no www or protocol)</td>
+</tr>
+<tr>
 <td>DeleteMember</td>
 <td>boolean</td>
 <td>No</td>
@@ -952,7 +964,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
         </span><span class="s2">"Longitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Latitude"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="p">,</span><span class="w">
-        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"partnerdomain.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"ReferralId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Password"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">"IsActive"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
