publish: Adding partnerdomain.com to Referral
generated from commit efd6d0c7d2bdb780e824e2b5e5ed962c916c789b

--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
         </span><span class="s2">"FirstName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Testme"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"LastName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Tester"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"partnerdomain.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"123 Main Street"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="w">
     </span><span class="p">}]</span><span class="w">
@@ -778,6 +779,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
         </span><span class="s2">"FirstName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Testme"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"LastName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Tester"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Referral"</span><span class="p">:</span><span class="w"> </span><span class="s2">"partnerdomain.com"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"Address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"123 Main Street"</span><span class="p">,</span><span class="w">
         </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="w">
     </span><span class="p">}]</span><span class="w">
