publish: Switching H4H back to RoomSteals
generated from commit 7d89b1a26cff6f4545d3445cb1dcc1f7aae1e38f

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 <p>We have examples using a shell. You can view code examples in the dark area to the right, and (when languages become available) you can switch the programming language of the examples with the tabs in the top right.</p>
 <h1 id='authentication'>Authentication</h1><h2 id='basic-authentication'>Basic Authentication</h2>
-<p>RoomSteals uses Basic Authentication to allow access to the API. You can request RoomSteals API credentials by partnering with us and emailing <a href="mailto:hello@hotelsforhope.com">support</a>.</p>
+<p>RoomSteals uses Basic Authentication to allow access to the API. You can request RoomSteals API credentials by partnering with us and emailing <a href="mailto:hello@roomsteals.com">support</a>.</p>
 
 <p>All examples using CURL in this documentation specify the Basic Authentication header with the following: <code>-H &#39;Authorization: Basic {BASE64-ENCODED-STRING}&#39;</code></p>
 
