publish: Merge remote-tracking branch 'upstream/master'
generated from commit 9d62c18418980a8d6dbfaecd3408150f717ae9f4

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
         <img src="images/navbar.png" alt="Navbar" />
       </span>
     </a>
-    <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+    <div class="toc-wrapper" style="background-color: #243159">
+      <img src="https://static.hotelsforhope.com/portals/child-portals/cug/52342/images/logo-blue.png" class="logo" style="margin: 15px auto 0;" alt="Logo blue" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
         </div>
         <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
+          <input type="text" class="search" id="input-search" placeholder="Search" style="background-color: #243159">
         </div>
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
@@ -1736,7 +1736,7 @@ Either the `affiliateId` or `siteId` must be passsed into this endpoint.  This e
 <p>When creating a reservation, use this mapping to find the appropriate values to use for these required parameters:</p>
 
 <aside class="notice">
-All values are based on the Detail response and have a starting point of `ArnResponse.RateDetails.HotelRateDetails.Hotel.RatePlan.Room`
+    All values are based on the Detail response and have a starting point of `ArnResponse.RateDetails.HotelRateDetails.Hotel.RatePlan.Room`
 </aside>
 
 <ul>
@@ -1769,6 +1769,10 @@ If an availability search fails to return rates, we suggest not showing the hote
 
 <aside class="notice">
 For the `children` parameter, we always suggest sending in a value of "0". Many older GDS do not accept this parameter at all, and including it may return inconsistent pricing because of this.
+</aside>
+
+<aside class="notice">
+  If returned, the `NightlyRate` discount is pre-tax discount from the pre-tax price. The `Total.Discount` is a post-tax discount from post-tax total.
 </aside>
 <pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://api.travsrv.com/hotel.aspx?</span><span class="se">\</span><span class="s2">
 &amp;siteid={SITEID}</span><span class="se">\</span><span class="s2">
@@ -2052,6 +2056,10 @@ For the `children` parameter, we always suggest sending in a value of "0". Many 
 ** <code>candidatesearch</code>: If a location based search is being made, this attribute can be sent to specify that no rates and availability should be returned. When set to true, and in conjunction with a location based search, only the list of candidate properties are returned (very fast). This allows calls to be made for each individual property asynchronously for actual rates and availability.</li>
 </ul>
 <h4 id='sorttype'><code>sortType</code></h4>
+<aside class="notice">
+  Note the `dealpercent` and `dealamount` sorting are related to historical discounts, not currently listed discounts.  You must sort the results of an availability search by the calculated percentage or given discount amount yourself after receiving the results of the query.
+</aside>
+
 <table><thead>
 <tr>
 <th>Sort Type</th>
@@ -2064,11 +2072,11 @@ For the `children` parameter, we always suggest sending in a value of "0". Many 
 </tr>
 <tr>
 <td><code>dealpercent</code></td>
-<td>Sorts the hotel results based on prices last seen and returns the best percentage savings we have found historically for the specified dates.</td>
+<td>Sorts the hotel results based on prices last seen and returns the best percentage savings we have found historically (not currently) for the specified dates.</td>
 </tr>
 <tr>
 <td><code>dealamount</code></td>
-<td>Sorts the hotel results based on prices last seen and returns the best amount savings we have found historically and for those dates.</td>
+<td>Sorts the hotel results based on prices last seen and returns the best amount savings we have found historically (not currently) and for those dates.</td>
 </tr>
 </tbody></table>
 <h2 id='hotel-detail'>Hotel Detail</h2>
