publish: Merge remote-tracking branch 'upstream/master'
generated from commit 9d62c18418980a8d6dbfaecd3408150f717ae9f4

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
         <img src="images/navbar.png" alt="Navbar" />
       </span>
     </a>
-    <div class="toc-wrapper" style="background-color: #243159">
+    <div class="toc-wrapper">
       <img src="https://static.hotelsforhope.com/portals/child-portals/cug/52342/images/logo-blue.png" class="logo" style="margin: 15px auto 0;" alt="Logo blue" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
         </div>
         <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search" style="background-color: #243159">
+          <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
