--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
         <img src="images/navbar.png" alt="Navbar" />
       </span>
     </a>
-    <div class="toc-wrapper">
+    <div class="toc-wrapper" style="background-color: #243159;">
       <img src="https://static.hotelsforhope.com/portals/child-portals/cug/52342/images/logo-blue.png" class="logo" style="margin: 15px auto 0;" alt="Logo blue" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
         </div>
         <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
+          <input type="text" class="search" id="input-search" placeholder="Search" style="background-color: #243159; color: #fff;">
         </div>
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
@@ -351,7 +351,7 @@
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
-      <div class="content">
+      <div class="content" style="background-color: #243159;">
         <h1 id='introduction'>Introduction</h1>
 <p>Welcome to the RoomSteals API! You can use our API to access RoomSteals API endpoints, which can get information on hundreds of thousands of hotels, their availability, details, as well as create and cancel reservations.</p>
 
