publish: Color update
generated from commit 4962a03ab2273da618f8339daa4d4aeb37fd0916

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
-      <div class="content" style="background-color: #243159;">
+      <div class="content">
         <h1 id='introduction'>Introduction</h1>
 <p>Welcome to the RoomSteals API! You can use our API to access RoomSteals API endpoints, which can get information on hundreds of thousands of hotels, their availability, details, as well as create and cancel reservations.</p>
 
@@ -3480,7 +3480,7 @@ type=cities</span><span class="se">\</span><span class="s2">
 </tbody></table>
 
       </div>
-      <div class="dark-box">
+      <div class="dark-box" style="background-color: #243159;">
           <div class="lang-selector">
                 <a href="#" data-language-name="shell">shell</a>
           </div>
