publish: Gemlock update
generated from commit 35c85b7d8b92bf8fcc59c076f3e89b64d7786144

--- a/index.html
+++ b/index.html
@@ -196,16 +196,16 @@
   color: #f92672;
 }
     </style>
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all.js"></script>
+    <link href="stylesheets/screen-c99203d8.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-bccf8c07.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all-c5541673.js"></script>
   </head>
 
   <body class="index" data-languages="[&quot;shell&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" alt="Navbar" />
+        <img src="images/navbar-cad8cdcb.png" alt="Navbar" />
       </span>
     </a>
     <div class="toc-wrapper" style="background-color: #243159;">
@@ -3486,10 +3486,5 @@ type=cities</span><span class="se">\</span><span class="s2">
           </div>
       </div>
     </div>
-
-    <!-- Zoho Sales IQ chat -->
-    <script type="text/javascript">
-    var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"e5889e29d9183daec18d9a6b8dc0405081b74d469084cb01ee414537d5e3fe9b", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
-    </script>
   </body>
 </html>
